# rocketmq

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  amqp0-9-1.txt  docker-compose.rabbitmq.yml  docker-compose.yml  package-lock.json  package.json  rocketmq.conf  run.sh
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
client/: Dockerfile  eslint.config.mjs  logger.ts  main.ts  notification_service.ts  order_service.ts  package-lock.json  package.json  payment_service.ts  rocketmq.ts
client/src/: app.module.ts  consumer.ts  main.ts  publisher.ts  rocketmq.ts  schema.ts  shared.ts
docs/: cluster.md  code-standards.md  commits.md  core_broker.md  performance.md  protocol.md  pull-requests.md  reliability.md  semver.md  storage.md
docs/schema/: README.md  sprint_1_core_schema_module.md  sprint_2_queue_integration.md  sprint_3_publish_validation.md  sprint_4_persistence_and_hardening.md
managment/: Dockerfile  package.json  pnpm-lock.yaml
managment/app/: globals.css  layout.tsx  page.tsx
managment/components/: app-shell.tsx  connect-dialog.tsx  dashboard.tsx
managment/lib/: hooks.ts  rabbitmq-client.ts  store.ts
managment/types/: rabbitmq.ts
src/: broker.rs  config.rs  connection.rs  error.rs  exchange.rs  main.rs  protocol.rs
src/auth/: credentials.rs  mod.rs  permissions.rs
src/cluster/: discovery.rs  manager.rs  metadata.rs  mod.rs  network.rs  partition.rs  protocol.rs  raft.rs
src/core/: amqp_codec.rs  method.rs  mod.rs  (+4 more)
tests/: amqp_integration.js  amqp_integration.py  cluster_integration.py
(+180 files in other folders)
