[package]
name = "rocketmq"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
crc32fast = "1"
byteorder = "1"
bcrypt = "0.17"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-rustls = "0.26"
rustls-pemfile = "2"
rcgen = "0.13"
