[package]
name = "rocketmq"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
crc32fast = "1"
byteorder = "1"
bcrypt = "0.17"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-rustls = "0.26"
rustls-pemfile = "2"
rcgen = "0.13"
axum = "0.8"
tower-http = { version = "0.6", features = ["fs"] }
opentelemetry = { version = "0.29", features = ["metrics"] }
opentelemetry_sdk = { version = "0.29", features = ["metrics", "rt-tokio"] }
prost = "0.13"
prost-types = "0.13"
prost-reflect = { version = "0.14", features = ["serde"] }
protox = "0.7"
bytes = "1"
opentelemetry-prometheus = "0.29"
prometheus = "0.14.0"
tracing-opentelemetry = "0.30"
sysinfo = "0.39"

